<resources>
    <string name="app_name">News App</string>
    <string name="news">News</string>
    <string name="splash_image">splash image</string>
    <string name="splash_text">Get informed as fast as possible\n on breaking news via your phone</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="back_to_login">Already have an account? Go back to login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="send_reset_password_email">Send Reset Password Email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="no_items_available">No Items Available</string>
    <string name="united_states_of_america">United States of America</string>
    <string name="usa">USA</string>
</resources>