<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".ui.activities.Login">

            <ImageView
                android:layout_width="400dp"
                android:layout_height="350dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="60dp"
                app:srcCompat="@drawable/splash_ic"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/editext_background"
                android:drawableStart="@drawable/email_ic"
                android:drawableLeft="@drawable/email_ic"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="12sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/editext_background"
                android:drawableStart="@drawable/password_ic"
                android:drawableLeft="@drawable/password_ic"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="12sp"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:text="@string/login"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/toRegister"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:text="@string/forgot_password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
</layout>