<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.ResetPassword">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:gravity="center_horizontal"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_above="@id/resetPasswordEmail"
            app:srcCompat="@drawable/forgot_ic"/>

        <EditText
            android:id="@+id/resetPasswordEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editext_background"
            android:drawableStart="@drawable/email_ic"
            android:drawableLeft="@drawable/email_ic"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry,TextFields" />

        <Button
            android:id="@+id/sendResetPasswordEMail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/resetPasswordEmail"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_background"
            android:text="@string/send_reset_password_email"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

</layout>